# anomaliesIO

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
algos/: complex_query.py  find_anomalies.py  main.py  simple_query.py  twitter_algo.py
algos/examples/: read_from_csv_example.py
algos/get_anomalies/: get_anomalies_from_csv.py  simple_query.py
algos/test/: temp_test_file.py
algos/test_data/: complex_data2.csv  simple_data.csv  simple_data1.csv
algos/test_data/queries/: general_data.sql
algos/twitter_algo/: anomaly_detect_ts.py
anomaliesIO_venv/: pip-selfcheck.json
anomlaiesIO/: db.sqlite3  manage.py
anomlaiesIO/anomaliesFinder/: anomalies_finder_utils.py  apps.py  models.py  urls.py  views.py
anomlaiesIO/anomlaiesIO/: asgi.py  settings.py  urls.py  wsgi.py
anomlaiesIO/media/: csv_data_2020-07-24_21:06:31.csv  csv_data_2020-08-01_11:41:46.csv
anomlaiesIO/static/css/: styles.css
anomlaiesIO/static/css/financial_calculator/: forms.css  main.css  tabs.css
anomlaiesIO/static/js/: main.js
anomlaiesIO/static/js/anomaliesFinder/: main.js  stepOne_saveUploadedFiles.js  stepTwo_setSchema.js
anomlaiesIO/static/js/financial-calculators/: main.js
anomlaiesIO/templates/: index.html
anomlaiesIO/templates/anomaliesFinder/: index.html  main.html  upload-csv.html
anomlaiesIO/templates/financial_calculator/: about.html  index.html  main.html  real-estate.html
anomlaiesIO/templates/infrastructure/: loader.html
financial_calculator/: apps.py  urls.py  views.py
utils/: logger.py  pythonic_utils.py
(+10 files in other folders)
