[tool.poetry]
name = "anomaliesio"
version = "0.1.0"
description = ""
authors = ["shay.misgav <shay.misgav@fiverr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "3.0"
tad = "^0.0.6"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
